envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: reisen_host
              domains: ["reisen.localhost"]
              routes:
                - match: { prefix: "/" }
                  route: { cluster: reisen_service }
            - name: s3_host
              domains: ["s3.localhost"]
              routes:
                - match: { prefix: "/" }
                  route: { cluster: s3_service }
          http_filters:
          - name: "envoy.filters.http.cache"
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.cache.v3.CacheConfig"
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.cache.simple_http_cache.v3.SimpleHttpCacheConfig"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: reisen_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: reisen_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: reisen
                port_value: 1323
  - name: s3_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: s3_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: s3
                port_value: 9000
